2003-08-05  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal, valueFromLit): use TYPE_* types
	* src/SDCCval.c (constVal): changed default to signed; hex and octal
	constants are unsigned; added recognition of "u" flag for unsigned
	* src/SDCCval.c (valMult): fixed signdness, added warning for overflow
	* src/SDCCval.c (valDiv, valMod): fixed signdness
	* src/SDCCicode.c (operandOperation): fixed critical typo; fixed
	signedness of modulo, left and right shift
	* support/Util/SDCCerr.c: added warning "integer overflow in expression"
	* support/Util/SDCCerr.h: added warning W_INT_OVL
	* src/SDCCast.c (decorateType): fixed gcc3.3 warning
	* src/SDCCast.c (ast_print): improved output of constants

2003-08-04  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	Fixed some warnings when building with MSVC:

	* as\mcs51\asdata.c
	* as\z80\asdata.c
	* as\mcs51\asm.h
	* as\z80\asm.h
	* link\z80\aslink.h
	* link\z80\lkdata.c
	* link\z80\lkeval.c
	* link\z80\lkgb.c
	* link\z80\lkihx.c
	* link\z80\lks19.c
	* link\z80\lksym.c
	* support\cpp2\cpplib.c
	* src\ds390\gen.c
	* src\mcs51\gen.c
    
2003-08-03  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (constExprTree): fix bug #781827 by Carl Worth <cworth@isi.edu>

2003-08-01  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* support\librarian\clean.mk: Do not remove Makefile.
	* support\librarian\Makefile: added.

2003-08-01  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	Added librarian to MSVC build:
	* all.dsp
	* sdcc.dsw
	* support\librarian\librarian.dsp

	'configure' not needed for librarian, removed:
	* support\librarian\configure
	* support\librarian\configure.in
	* support\librarian\config_in.h
	* support\librarian\Makefile.in

	Hopefully these ones built the librarian and the rest of sdcc properly:
	* Makefile
	* Makefile.common.in

	Messed up 'configure', so revert to previous version:
	* configure
	* configure.in

2003-07-31  Bernhard Held <bernhard@bernhardheld.de>
